--- a/pom.xml
+++ b/pom.xml
@@ -37,20 +37,37 @@
 	<!-- For apigee.options, refer to "Advanced Configuration Options" under https://github.com/apigee/apigee-deploy-maven-plugin#pom-xml-sample -->
 	<profiles>
 		<profile>
-			<id>test</id>
+			<id>dev</id>
 			<properties>
-				<apigee.profile>test</apigee.profile>
-				<apigee.env>test</apigee.env>
+				<apigee.profile>dev</apigee.profile>
+				<apigee.env>eval</apigee.env>
 				<apigee.hosturl>https://apigee.googleapis.com</apigee.hosturl>
 				<apigee.apiversion>v1</apigee.apiversion>
 				<apigee.org>${org}</apigee.org>
 				<apigee.options>override</apigee.options> <!-- overrides is default and the only option -->
 				<apigee.bearer>${bearer}</apigee.bearer> <!-- this takes precedence over service account file -->
 				<apigee.serviceaccount.file>${file}</apigee.serviceaccount.file>
-				<apigee.config.options>update</apigee.config.options>
 				<apigee.config.dir>./target/resources/edge</apigee.config.dir>
-				<api.northbound.domain>amer-cs-hybrid-demo2-test.hybrid-apigee.net</api.northbound.domain>
-				<api.testtag>~@wip</api.testtag>
+				<apigee.config.options>update</apigee.config.options>
+				<api.northbound.domain>miguelmendoza-external.apigeedemo.com</api.northbound.domain>
+				<api.testtag>~@wip,~@mock</api.testtag>
+			</properties>
+		</profile>
+		<profile>
+			<id>test</id>
+			<properties>
+				<apigee.profile>test</apigee.profile>
+				<apigee.env>eval</apigee.env>
+				<apigee.hosturl>https://apigee.googleapis.com</apigee.hosturl>
+				<apigee.apiversion>v1</apigee.apiversion>
+				<apigee.org>${org}</apigee.org>
+				<apigee.options>override</apigee.options> <!-- overrides is default and the only option -->
+				<apigee.bearer>${bearer}</apigee.bearer> <!-- this takes precedence over service account file -->
+				<apigee.serviceaccount.file>${file}</apigee.serviceaccount.file>
+				<apigee.config.dir>./target/resources/edge</apigee.config.dir>
+				<apigee.config.options>update</apigee.config.options>
+				<api.northbound.domain>miguelmendoza-external.apigeedemo.com</api.northbound.domain>
+				<api.testtag>~@wip,~@mock</api.testtag>
 			</properties>
 		</profile>
 		<profile>
@@ -64,60 +81,9 @@
 				<apigee.options>override</apigee.options> <!-- overrides is default and the only option -->
 				<apigee.bearer>${bearer}</apigee.bearer> <!-- this takes precedence over service account file -->
 				<apigee.serviceaccount.file>${file}</apigee.serviceaccount.file>
-				<apigee.config.options>update</apigee.config.options>
-				<apigee.config.dir>./target/resources/edge</apigee.config.dir>
-				<api.northbound.domain>amer-cs-hybrid-demo2-test.hybrid-apigee.net</api.northbound.domain>
-				<api.testtag>~@wip,~@mock</api.testtag>
-			</properties>
-		</profile>
-		<profile>
-			<id>ngsaas-dev</id>
-			<properties>
-				<apigee.profile>ngsaas-dev</apigee.profile>
-				<apigee.env>default-dev</apigee.env>
-				<apigee.hosturl>https://apigee.googleapis.com</apigee.hosturl>
-				<apigee.apiversion>v1</apigee.apiversion>
-				<apigee.org>${org}</apigee.org>
-				<apigee.options>override</apigee.options> <!-- overrides is default and the only option -->
-				<apigee.bearer>${bearer}</apigee.bearer> <!-- this takes precedence over service account file -->
-				<apigee.serviceaccount.file>${file}</apigee.serviceaccount.file>
 				<apigee.config.dir>./target/resources/edge</apigee.config.dir>
 				<apigee.config.options>update</apigee.config.options>
-				<api.northbound.domain>api-dev.ssvaidyanathan.com</api.northbound.domain>
-				<api.testtag>~@wip,~@mock</api.testtag>
-			</properties>
-		</profile>
-		<profile>
-			<id>ngsaas-test</id>
-			<properties>
-				<apigee.profile>ngsaas-test</apigee.profile>
-				<apigee.env>default-test</apigee.env>
-				<apigee.hosturl>https://apigee.googleapis.com</apigee.hosturl>
-				<apigee.apiversion>v1</apigee.apiversion>
-				<apigee.org>${org}</apigee.org>
-				<apigee.options>override</apigee.options> <!-- overrides is default and the only option -->
-				<apigee.bearer>${bearer}</apigee.bearer> <!-- this takes precedence over service account file -->
-				<apigee.serviceaccount.file>${file}</apigee.serviceaccount.file>
-				<apigee.config.dir>./target/resources/edge</apigee.config.dir>
-				<apigee.config.options>update</apigee.config.options>
-				<api.northbound.domain>api-test.ssvaidyanathan.com</api.northbound.domain>
-				<api.testtag>~@wip,~@mock</api.testtag>
-			</properties>
-		</profile>
-		<profile>
-			<id>ngsaas-prod</id>
-			<properties>
-				<apigee.profile>ngsaas-prod</apigee.profile>
-				<apigee.env>default-prod</apigee.env>
-				<apigee.hosturl>https://apigee.googleapis.com</apigee.hosturl>
-				<apigee.apiversion>v1</apigee.apiversion>
-				<apigee.org>${org}</apigee.org>
-				<apigee.options>override</apigee.options> <!-- overrides is default and the only option -->
-				<apigee.bearer>${bearer}</apigee.bearer> <!-- this takes precedence over service account file -->
-				<apigee.serviceaccount.file>${file}</apigee.serviceaccount.file>
-				<apigee.config.dir>./target/resources/edge</apigee.config.dir>
-				<apigee.config.options>update</apigee.config.options>
-				<api.northbound.domain>api-prod.ssvaidyanathan.com</api.northbound.domain>
+				<api.northbound.domain>miguelmendoza-external.apigeedemo.com</api.northbound.domain>
 				<api.testtag>~@wip,~@mock</api.testtag>
 			</properties>
 		</profile>
